grammar.js
    source_file: $ => choice(
      $.runnable_file,
      $.unit_file,
      repeat($.statement),
      repeat($.declaration)
    ),

    runnable_file: $ => seq(
      $.file_header,
      repeat($.declaration),
      field('body', choice($.block_statement, $.asm_statement)),
      '.',
    ),

    unit_file: $ => seq(
      $.file_header,
      repeat($.declaration),
      repeat($.section),
      kw('end'),
      '.',
    ),

    file_header: $ => seq(
      field('file_type', choice(kw('unit'), kw('program'), kw('library'), kw('package'))),
      field('name', $._name),
      optional(seq(kw('deprecated'), field('message', $.compound_string_literal))),
      ';'
    ),

    section: $ => seq(
      field('kind', choice(
        kw('interface'),
        kw('implementation'),
        kw('initialization'),
        kw('finalization')
      )),
      choice(repeat($.declaration), repeat($.statement)),
    ),

    uses_clause: $ => seq(
      kw('uses'),
      repeat($.import),
    ),

    import: $ => seq(
      field('name', $._name),
      optional(seq(
        kw('in'),
        field('path', $.compound_string_literal))
      ),
      optional(choice(',', ';'))
    ),

    _attributes: $ => repeat1($.attribute_list),

    class_definition: $ => seq(
      kw('class'),
      optional(field('inheritance_modifier', choice(kw('abstract'), kw('sealed')))),
      optional($.base_list),

      repeat($.class_member),
      repeat($.class_section),
      kw('end'),
    ),

    record_definition: $ => seq(
      optional(kw('packed')),
      kw('record'),
      repeat($.class_member),
      repeat($.class_section),
      kw('end'),
    ),

    base_list: $ => seq(
      '(',
      commaSep($._name),
      ')',
    ),

    class_section: $ => seq(
      optional(kw('strict')),
      field('visibility', choice(
        kw('published'),
        kw('public'),
        kw('protected'),
        kw('private'),
        kw('automated')
      )),
      repeat($.class_member),
    ),

    class_field: $ => seq(
      optional($._attributes),
      optional(kw('class')),
      commaSep1(field('name', $._identifier)),
      $._type_declaration,
      optional(';')
    ),

    class_property: $ => seq(
      optional($._attributes),
      optional(kw('class')),
      kw('property'),
      field('name', $._identifier),
      optional($.array_parameter_list),
      optional($._type_declaration),
      repeat($.property_attribute),
      optional(seq(';', choice(kw('default'), kw('nodefault')))),
      optional(';')
    ),

    property_attribute: $ => seq(
      field('kind', choice(
        kw('read'),
        kw('write'),
        kw('index'),
        kw('stored'),
        seq(optional(field('specifier', choice(kw('readonly'), kw('writeonly')))), kw('dispid')),
        kw('implements'),
        kw('default')
      )),
      field('value', commaSep1($.expression))
    ),

    interface_definition: $ => seq(
      field('kind', choice(kw('interface'), kw('dispinterface'))),
      optional($.base_list),
      optional($.guid_declaration),
      repeat($.class_member),
      kw('end'),
    ),

    guid_declaration: $ => seq(
      '[',
      $.compound_string_literal,
      ']',
    ),

    parameter_list: $ => seq(
      '(',
      sep(choice($.parameter_declaration, $.record_variant_part), ';'),
      ')',
    ),

    parameter_declaration: $ => seq(
      // TODO use alias for the modifier instead
      optional($._attributes),
      optional(field('modifier', choice(kw('const'), kw('var'), kw('out')))),
      optional($._attributes),
      commaSep1($.argument_name),
      optional($._type_declaration),
      optional(seq('=', field('default_value', $.expression))),
    ),

    argument_name: $ => $._identifier,

    _method_directive: $ => seq(optional(';'), $.method_directive),
    method_directive: $ => choice(
      kw('virtual'),
      kw('abstract'),
      kw('override'),
      kw('overload'),
      kw('unsafe'),
      kw('stdcall'),
      kw('cdecl'),
      kw('register'),
      kw('pascal'),
      kw('winapi'),
      kw('noreturn'),
      kw('safecall'),
      kw('inline'),
      kw('reintroduce'),
      kw('static'),
      kw('dynamic'),
      kw('final'),
      kw('varargs'),
      $.message_directive,
      $.dispid_directive
    ),

    declaration_section: $ => choice(
      $._type_declaration_section,
      $._value_declaration_section
    ),

    _type_declaration_section: $ => seq(
      field('kind', kw('type')),
      repeat($.type_declaration)
    ),

    _value_declaration_section: $ => seq(
      optional(kw('class')),
      field('kind', choice(
        kw('var'),
        kw('threadvar'),
        kw('const'),
        kw('resourcestring')
      )),
      repeat($.global_declaration),
    ),

    type_declaration: $ => seq(
      optional($._attributes),
      field('name', $._identifier),
      optional($.type_parameter_list),
      '=',
      $._type_definition,
      repeat($.hint_directive),
      optional(';')
    ),

    global_declaration: $ => seq(
      optional($._attributes),
      commaSep1($._identifier),
      optional($._type_declaration),
      optional(seq(
        '=',
        $._section_value,
      )),
      optional($.absolute_declaration),
      repeat($.hint_directive),
      optional(';')
    ),

    _section_value: $ => prec(1, choice(
      $._type_definition,
      $.expression
    )),

    _type_definition: $ => choice(
      $.type_alias_definition,
      $.strong_type_alias_definition,
      $.helper_definition,
      $.class_definition,
      alias($.fieldless_class_definition, $.class_definition),
      $.forward_class_definition,
      $.forward_interface_definition,
      $.interface_definition,
      $.record_definition,
    ),

    type_alias_definition: $ => seq(
      field('type', $.type),
    ),

    enum_type: $ => seq(
      '(',
      sep1($.enum_value, ','),
      ')',
    ),

    enum_value: $ => seq(
      field('name', $._identifier),
      optional(seq('=', field('value', $.expression))),
    ),

    array_type: $ => seq(
      optional(kw('packed')),
      kw('array'),
      optional($.index_range),
      kw('of'),
      field('type', $.type)
    ),

    reference_to_type: $ => seq(
      kw('reference'),
      kw('to'),
      field('kind', choice(
        kw('function'),
        kw('procedure')
      )),
      optional($.parameter_list),
      optional($._type_declaration)
    ),

    object_of_type: $ => seq(
      $.function_type,
      kw('of'),
      kw('object')
    ),

    function_type: $ => prec(1, seq(
      field('kind', choice(kw('function'), kw('procedure'))),
      $.parameter_list,
      optional($._type_declaration),
      repeat($._method_directive)
    )),

    function_declaration: $ => seq(
      optional($._attributes),
      optional(kw('class')),
      field('kind', choice(
        kw('procedure'),
        kw('function'),
        kw('constructor'),
        kw('destructor'),
        kw('operator')
      )),
      field('name', $.function_name),
      optional($.type_parameter_list),
      optional($.parameter_list),
      optional(field('return_type', seq(':', $.type))),
      repeat($._method_directive),
      optional(';'),
      repeat($.hint_directive),
      optional(';')
    ),

    function_name: $ => seq(
      optional(field('qualifier', seq($._name, '.'))),
      field('name', $._reserved_identifier)
    ),


    _type_declaration: $ => seq(":", field('type', $.type)),
    block_statement: $ => seq(
      kw('begin'),
      repeat($.statement),
      kw('end'),
      optional(';')
    ),

    integer_literal: _ => token(choice(
      /[0-9]+/,           // decimal
      /\$[0-9a-fA-F]+/,  // hex
      /%[01]+/,           // binary
    )),

    string_literal: _ => token(seq(
      '\'',
      repeat(choice(
        /[^'\r\n]/,
        '\'\'',
      )),
      '\'',
    )),

    compound_string_literal: $ => repeat1(choice(
      $.string_literal,
      $.char_literal,
    )),

    //#endregion
    generic_name: $ => seq($._identifier, $.type_argument_list),

    _reserved_name: $ => choice(
      $._reserved_identifier,
      alias($._reserved_generic_name, $.generic_name)
    ),

    type_argument_list: $ => seq(
      '<',
      choice(
        commaSep(choice($._name, $.array_type)),
      ),
      '>',
    ),

    _name: $ => choice(
      $.qualified_name,
      $._simple_name,
    ),

    qualified_name: $ => prec(PREC.DOT, seq(
      field('qualifier', $._name),
      '.',
      field('name', $._reserved_name),
    )),

    identifier: $ =>  /[&\p{L}_][&\p{L}\p{Nd}_]*/u,
    _identifier: $ => choice(
      $.identifier,
      kw('string')
    ),

    _reserved_identifier: $ => reserved(
      'properties',
      $.identifier
    ),
