test/corpus/type_declaration.txt
================================================================================
Multiple type declaration sections
================================================================================
unit Foo;
interface
type
  TFoo = Integer;
type
  TBar = String;
implementation
end.
--------------------------------------------------------------------------------

(source_file
  (unit_file
    (file_header
      name: (identifier))
    (section
      (declaration_section
        (type_declaration
          name: (identifier)
          (type_alias_definition
            type: (identifier))))
      (declaration_section
        (type_declaration
          name: (identifier)
          (type_alias_definition))))
    (section)))

================================================================================
Type alias
================================================================================
unit Foo;
interface
type
  TFoo = System.SysUtils.TStringList;
implementation
end.
--------------------------------------------------------------------------------

(source_file
  (unit_file
    (file_header
      name: (identifier))
    (section
      (declaration_section
        (type_declaration
          name: (identifier)
          (type_alias_definition
            type: (qualified_name
              qualifier: (qualified_name
                qualifier: (identifier)
                name: (identifier))
              name: (identifier))))))
    (section)))

================================================================================
Class declaration
================================================================================
unit Foo;
interface
type
  TAnimal = class(TObject, IDisposable)
    FValue: boolean;
  private
    FName: string;
    FAge: Integer;
  public
    constructor Create(Name, Prefix: string; Age: Integer);
    destructor Destroy;
    function GetName: string; override;
    class procedure DoSomething; stdcall;
    property Name: string read FName write FName;
    property Age: Integer read FAge;
    procedure SetName(const Name: string); virtual
  end;
implementation
end.
--------------------------------------------------------------------------------

(source_file
  (unit_file
    (file_header
      name: (identifier))
    (section
      (declaration_section
        (type_declaration
          name: (identifier)
          (class_definition
            (base_list
              (identifier)
              (identifier))
            (class_field
              name: (identifier)
              type: (identifier))
            (class_section
              (class_field
                name: (identifier))
              (class_field
                name: (identifier)
                type: (identifier)))
            (class_section
              (function_declaration
                name: (function_name
                  name: (identifier))
                (parameter_list
                  (parameter_declaration
                    (argument_name
                      (identifier))
                    (argument_name
                      (identifier)))
                  (parameter_declaration
                    (argument_name
                      (identifier))
                    type: (identifier))))
              (function_declaration
                name: (function_name
                  name: (identifier)))
              (function_declaration
                name: (function_name
                  name: (identifier))
                (method_directive))
              (function_declaration
                name: (function_name
                  name: (identifier))
                (method_directive))
              (class_property
                name: (identifier)
                (property_attribute
                  value: (identifier))
                (property_attribute
                  value: (identifier)))
              (class_property
                name: (identifier)
                type: (identifier)
                (property_attribute
                  value: (identifier)))
              (function_declaration
                name: (function_name
                  name: (identifier))
                (parameter_list
                  (parameter_declaration
                    (argument_name
                      (identifier))))
                (method_directive)))))))
    (section)))

================================================================================
Enum type declaration
================================================================================
program Foo;
type
  TColor = (Red, Green, Blue);
  TDirection = (North = 0, South = 1, East, West);
begin
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    (declaration_section
      (type_declaration
        name: (identifier)
        (type_alias_definition
          type: (enum_type
            (enum_value
              name: (identifier))
            (enum_value
              name: (identifier))
            (enum_value
              name: (identifier)))))
      (type_declaration
        name: (identifier)
        (type_alias_definition
          type: (enum_type
            (enum_value
              name: (identifier)
              value: (integer_literal))
            (enum_value
              name: (identifier)
              value: (integer_literal))
            (enum_value
              name: (identifier))
            (enum_value
              name: (identifier))))))
    body: (block_statement)))

================================================================================
Array type
================================================================================
program Foo;
var
  x: array of Integer;
  y: array of TList<String>;
begin
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    (declaration_section
      (global_declaration
        (identifier)
        type: (array_type
          type: (identifier)))
      (global_declaration
        (identifier)
        type: (array_type
          type: (generic_name
            (identifier)
            (type_argument_list)))))
    body: (block_statement)))

================================================================================
Interface declaration
================================================================================
unit Foo;
interface
type
  IAnimal = interface(IBase)
    ['{12345678-1234-1234-1234-123456789ABC}']
    function GetName: string;
    procedure SetName(const Name: string);
    property Name: string read GetName write SetName;
  end;
implementation
end.
--------------------------------------------------------------------------------

(source_file
  (unit_file
    (file_header
      name: (identifier))
    (section
      (declaration_section
        (type_declaration
          name: (identifier)
          (interface_definition
            (base_list
              (identifier))
            (guid_declaration
              (compound_string_literal
                (string_literal)))
            (function_declaration
              name: (function_name
                name: (identifier)))
            (function_declaration
              name: (function_name
                name: (identifier))
              (parameter_list
                (parameter_declaration
                  (argument_name
                    (identifier)))))
            (class_property
              name: (identifier)
              (property_attribute
                value: (identifier))
              (property_attribute
                value: (identifier)))))))
    (section)))

================================================================================
Procedural types
================================================================================

program Test;
type
  TProc = procedure();
  TFunc = function(): Integer;
  TProcWithParams = procedure(X: Integer; Y: Integer);
  TFuncWithParams = function(X: Integer; Y: Integer): Boolean;
  TMethod = procedure() of object;
  TRefProc = reference to procedure();
  TRefFunc = reference to function(): Boolean;
  TRefFuncWithParams = reference to function(X: Integer): Boolean;
begin
end.

--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    (declaration_section
      (type_declaration
        name: (identifier)
        (type_alias_definition
          type: (function_type
            (parameter_list))))
      (type_declaration
        name: (identifier)
        (type_alias_definition
          type: (function_type
            (parameter_list)
            type: (identifier))))
      (type_declaration
        name: (identifier)
        (type_alias_definition
          type: (function_type
            (parameter_list
              (parameter_declaration
                (argument_name
                  (identifier))
                type: (identifier))
              (parameter_declaration
                (argument_name
                  (identifier))
                type: (identifier))))))
      (type_declaration
        name: (identifier)
        (type_alias_definition
          type: (function_type
            (parameter_list
              (parameter_declaration
                (argument_name
                  (identifier))
                type: (identifier))
              (parameter_declaration
                (argument_name
                  (identifier))
                type: (identifier)))
            type: (identifier))))
      (type_declaration
        name: (identifier)
        (type_alias_definition
          type: (object_of_type
            (function_type
              (parameter_list)))))
      (type_declaration
        name: (identifier)
        (type_alias_definition
          type: (reference_to_type
            (parameter_list))))
      (type_declaration
        name: (identifier)
        (type_alias_definition
          type: (reference_to_type
            (parameter_list)
            type: (identifier))))
      (type_declaration
        name: (identifier)
        (type_alias_definition
          type: (reference_to_type
            (parameter_list
              (parameter_declaration
                (argument_name
                  (identifier))
                type: (identifier)))
            type: (identifier)))))
    body: (block_statement)))

================================================================================
Record type
================================================================================
program Test;
type
  TProc = record
    Value : integer;
    public
      FValue : boolean;
  end;
begin
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    (declaration_section
      (type_declaration
        name: (identifier)
        (record_definition
          (class_field
            name: (identifier)
            type: (identifier))
          (class_section
            (class_field
              name: (identifier)
              type: (identifier))))))
    body: (block_statement)))
