test/corpus/uses_clause.txt
================================================================================
Uses clause in program - mixed simple and qualified units
================================================================================
program Foo;
uses
  SysUtils,
  System.Generics.Collections,
  Classes;
begin
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    (uses_clause
      (import
        name: (identifier))
      (import
        name: (qualified_name
          qualifier: (qualified_name
            qualifier: (identifier)
            name: (identifier))
          name: (identifier)))
      (import
        name: (identifier)))
    body: (block_statement)))

================================================================================
Uses clause in library
================================================================================
library Foo;
uses
  SysUtils;
begin
end.
--------------------------------------------------------------------------------

(source_file
  (runnable_file
    (file_header
      name: (identifier))
    (uses_clause
      (import
        name: (identifier)))
    body: (block_statement)))

================================================================================
Uses clause in both interface and implementation
================================================================================
unit Foo;
interface
uses
  SysUtils;
implementation
uses
  Classes;
end.
--------------------------------------------------------------------------------

(source_file
  (unit_file
    (file_header
      name: (identifier))
    (section
      (uses_clause
        (import
          name: (identifier))))
    (section
      (uses_clause
        (import
          name: (identifier))))))
